#2. QueryDSL의 다양한 기초 문법들

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,19 @@ spring:
     hibernate:
       ddl-auto: update
     database: mysql
+
+logging.level:
+  org.hibernate.SQL: debug
+
+
+
+
+
+
+
+
+
+
+
+
+
